# mcp_azuremladvanced

./: .dockerignore  .env  .env.example  Dockerfile  README.md  app.py  app_own_mcp.py  debug_datasets.py  deploy-aca.ps1  deploy-aci.ps1  deploy-appservice.ps1  docker-compose.yml  mcp_server.py  pyproject.toml  requirements.txt
langchain_x_azure/: .env  langchain_x_azureai.py
